examples/test/testpolicy8980.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8980
  namespace: namespace149
spec:
  podSelector:
    matchLabels:
      key5: value15
      key40: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value22
          key33: value35
      podSelector:
        matchLabels:
          key41: value29
          key10: value11
          key0: value10
